--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,16 @@
 <resources>
     <string name="app_name">Desafio Mobile Conductor</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="navigation_drawer_open">Abrir navigation drawer</string>
+    <string name="navigation_drawer_close">Fechar navigation drawer</string>
+
+    <string name="nav_header_desc">Header do Navigation</string>
+    <string name="nav_header_title">Bruno Melo</string>
+    <string name="nav_header_subtitle">brunonobrega.melo@gmail.com</string>
+
+    <string name="cartao_type">Tipo de Cartão</string>
+    <string name="bluecard">BlueCard</string>
+    <string name="greencard">GreenCard</string>
+    <string name="visao_geral">Visão Geral</string>
+    <string name="extrato">Extrato</string>
+    <string name="title_activity_extrato">ExtratoActivity</string>
 </resources>
