--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,24 @@
     <string name="visao_geral">Visão Geral</string>
     <string name="extrato">Extrato</string>
     <string name="title_activity_extrato">ExtratoActivity</string>
+    <string name="overview">Visão Geral</string>
+    <string name="saldo">Saldo</string>
+    <string name="zero_balance">R$0,00</string>
+    <string name="saldo_update_error">Não foi possivel atualizar o Saldo</string>
+    <string name="networ_error">Não foi possive obter as informações do servidor.</string>
+
+    <string-array name="months">
+        <item>Janeiro</item>
+        <item>Fevereiro</item>
+        <item>Março</item>
+        <item>Abril</item>
+        <item>Maio</item>
+        <item>Junho</item>
+        <item>Julho</item>
+        <item>Agosto</item>
+        <item>Setembro</item>
+        <item>Outubro</item>
+        <item>Novembro</item>
+        <item>Dezembro</item>
+    </string-array>
 </resources>
